<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/spinner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#61020000"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="319dp"
        android:layout_height="81dp"
        android:fontFamily="@font/caveat_bold"
        android:gravity="center"
        android:text="@string/SignUpPage"
        android:textColor="@color/white"
        android:textSize="@dimen/bigSize"

        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="260dp"
        android:layout_height="57dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/caveat_bold"
        android:hint="@string/nameus"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="5sp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/username"
        android:layout_width="260dp"
        android:layout_height="57dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/caveat_bold"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="5sp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/password_c"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password_c"
        android:layout_width="260dp"
        android:layout_height="57dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/caveat_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5sp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/repassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="260dp"
        android:layout_height="57dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/caveat_bold"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:paddingStart="5sp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/createbutton"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/password_c" />

    <Button
        android:id="@+id/createbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caveat_bold"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/goLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repassword" />

    <TextView
        android:id="@+id/goLogin"
        android:layout_width="186dp"
        android:layout_height="43dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:gravity="center"
        android:text="@string/registerd_login"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.928"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createbutton"
        app:layout_constraintVertical_bias="0.636"
        tools:text="Registerd? Login" />


</androidx.constraintlayout.widget.ConstraintLayout>