<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#61020000"
        android:orientation="horizontal" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:fontFamily="@font/caveat_bold"
        android:gravity="center"
        android:text="@string/login"

        android:textColor="@color/white"
        android:textSize="@dimen/bigSize"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/username"
        android:layout_width="264dp"
        android:layout_height="53dp"
        android:background="@color/white"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/caveat_bold"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="5sp"
        android:textDirection="firstStrong"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/caveat_bold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5sp"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/createaccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/createaccount"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:fontFamily="@font/caveat_bold"
        android:onClick="createaccount"
        android:text="@string/not_register"
        android:textColor="@color/white"
        android:textColorLink="@color/teal_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />


    <Button
        android:id="@+id/login_button"
        android:layout_width="149dp"
        android:layout_height="62dp"

        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login_button"

        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createaccount"
        app:layout_constraintVertical_bias="0.29"
        app:rippleColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>