<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Views.AdminPages.AdminPage">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <RelativeLayout
                android:id="@+id/topArea"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/relative"
                >
                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#86020000"
                    android:orientation="horizontal" />


                <TextView
                    android:id="@+id/myDashboard"
                    android:layout_width="333dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/acme"
                    android:gravity="center"
                    android:text="@string/admin_dashboard"
                    android:textColor="@android:color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/dashboard_adminName"
                    android:layout_width="264dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/myDashboard"
                    android:layout_alignEnd="@id/myDashboard"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="32dp"
                    android:fontFamily="@font/caveat_bold"
                    android:gravity="center"
                    android:text="@string/raya_odeh"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="38dp"
                android:layout_marginTop="-80dp"
                android:layout_marginEnd="10dp"
                android:columnCount="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/driverManager"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"

                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp"
                    android:background="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal|center_vertical"

                            android:background="@drawable/undraw_interaction_design_odgc"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:onClick="UserManagment"
                            android:text="@string/user_managment"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/parkingManager"
                    android:layout_width="150dp"
                    android:layout_height="152dp"
                    android:layout_margin="10dp"

                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp"
                    android:background="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal|center_vertical"

                            android:background="@drawable/undraw_male_avatar_323b"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="34dp"
                            android:layout_gravity="center_horizontal"
                            android:onClick="custometrs"
                            android:text="@string/customers_managment"
                            android:textSize="12sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/history"
                    android:layout_width="150dp"
                    android:layout_height="152dp"
                    android:layout_margin="10dp"

                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp"
                    android:background="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:background="@drawable/chef"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:onClick="AllAdmin"
                            android:text="@string/Admin_Managment"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            tools:text="@string/Admin_Managment" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/feedback"
                    android:layout_width="150dp"
                    android:layout_height="152dp"
                    android:layout_margin="10dp"

                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp"
                    android:background="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:background="@drawable/undraw_shopping_app_flsj"

                            />

                        <TextView
                            android:id="@+id/order"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:onClick="OrderMangment"
                            android:text="@string/order_managment"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/support"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp"
                    android:background="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:background="@drawable/undraw_reviews_lp8w"

                            android:contentDescription="TODO" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/Feedback"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:text="@string/Feedback" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/setting"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"

                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp"
                    android:background="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:background="@drawable/undraw_personal_finance_tqcd"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/the_sales"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/logout"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="10dp"

                    app:cardCornerRadius="10dp"
                    app:cardElevation="7dp"
                    android:background="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="2dp"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:background="@drawable/log"
                             />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/logout"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:onClick="logout"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </GridLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>